[gd_scene load_steps=8 format=3 uid="uid://fct3w40be0vo"]

[ext_resource type="Script" path="res://scripts/LevelMenu/levelSelector.gd" id="1_qng0c"]
[ext_resource type="Script" path="res://scripts/LevelMenu/level_selector_nav.gd" id="2_mpynw"]
[ext_resource type="Texture2D" uid="uid://5tblekd1u020" path="res://assets/gui/Level/Star/Active.png" id="3_2ftkj"]
[ext_resource type="FontFile" uid="uid://pf7m2v35pv56" path="res://assets/fonts/squada-one/SquadaOne-Regular.ttf" id="4_8f4na"]
[ext_resource type="PackedScene" uid="uid://ti5oj1f382d2" path="res://scenes/LevelMenu/levelGrid.tscn" id="5_vxtc4"]
[ext_resource type="PackedScene" uid="uid://bheakgcv4xagd" path="res://scenes/square_button.tscn" id="6_1hbhd"]

[sub_resource type="LabelSettings" id="LabelSettings_i0e4i"]
font = ExtResource("4_8f4na")
font_size = 48
font_color = Color(0.854902, 0.862745, 0.72549, 1)

[node name="ColorRect" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.196, 0.18, 0.184, 1)
script = ExtResource("1_qng0c")
metadata/_edit_vertical_guides_ = [110.0, 1170.0]
metadata/_edit_horizontal_guides_ = [650.0]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -530.0
offset_top = -291.0
offset_right = 530.0
offset_bottom = 291.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
alignment = 1
script = ExtResource("2_mpynw")

[node name="Top" type="VBoxContainer" parent="VBoxContainer"]
layout_direction = 2
layout_mode = 2
theme_override_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Top"]
layout_mode = 2
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="StarCounter" type="HBoxContainer" parent="VBoxContainer/Top/MarginContainer"]
layout_mode = 2

[node name="Star" type="TextureRect" parent="VBoxContainer/Top/MarginContainer/StarCounter"]
layout_mode = 2
texture = ExtResource("3_2ftkj")

[node name="Content" type="HBoxContainer" parent="VBoxContainer/Top/MarginContainer/StarCounter"]
layout_mode = 2

[node name="Stars" type="Label" parent="VBoxContainer/Top/MarginContainer/StarCounter/Content"]
layout_mode = 2
text = "4"
label_settings = SubResource("LabelSettings_i0e4i")

[node name="Slash" type="Label" parent="VBoxContainer/Top/MarginContainer/StarCounter/Content"]
layout_mode = 2
text = "/"
label_settings = SubResource("LabelSettings_i0e4i")

[node name="TotalStars" type="Label" parent="VBoxContainer/Top/MarginContainer/StarCounter/Content"]
layout_mode = 2
text = "45
"
label_settings = SubResource("LabelSettings_i0e4i")

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/Top"]
layout_mode = 2

[node name="ClipControl" type="Control" parent="VBoxContainer/Top/CenterContainer"]
clip_contents = true
custom_minimum_size = Vector2(712, 464)
layout_mode = 2

[node name="GridBox" type="HBoxContainer" parent="VBoxContainer/Top/CenterContainer/ClipControl"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LevelGrid" parent="VBoxContainer/Top/CenterContainer/ClipControl/GridBox" instance=ExtResource("5_vxtc4")]
layout_mode = 2

[node name="LevelGrid2" parent="VBoxContainer/Top/CenterContainer/ClipControl/GridBox" instance=ExtResource("5_vxtc4")]
layout_mode = 2

[node name="LevelGrid3" parent="VBoxContainer/Top/CenterContainer/ClipControl/GridBox" instance=ExtResource("5_vxtc4")]
layout_mode = 2

[node name="Bottom" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 340
alignment = 1

[node name="VolumeButton" parent="VBoxContainer/Bottom" instance=ExtResource("6_1hbhd")]
layout_mode = 2
texture_file = "res://assets/gui/Button/Icon/SoundOn.png"

[node name="NavButtons" type="HBoxContainer" parent="VBoxContainer/Bottom"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="PrevButton" parent="VBoxContainer/Bottom/NavButtons" instance=ExtResource("6_1hbhd")]
layout_mode = 2
texture_file = "res://assets/gui/Button/Icon/ArrowLeft-Bold.png"

[node name="NextButton" parent="VBoxContainer/Bottom/NavButtons" instance=ExtResource("6_1hbhd")]
layout_mode = 2
texture_file = "res://assets/GUI/Button/Icon/ArrowRight-Bold.png"

[node name="HomeButton" parent="VBoxContainer/Bottom" instance=ExtResource("6_1hbhd")]
layout_mode = 2
texture_file = "res://assets/gui/Button/Icon/Home.png"

[connection signal="pressed" from="VBoxContainer/Bottom/NavButtons/PrevButton" to="." method="_on_PrevButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Bottom/NavButtons/NextButton" to="." method="_on_NextButton_pressed"]
